--- a/cssfiles/styles.css
+++ b/cssfiles/styles.css
@@ -57,3 +57,12 @@ address{
     left: 0;
     min-height: 300px;
 }
+.btn-reserve{
+    margin-left: 10px;
+}
+#carouselButton {
+    right:0px;
+    position: absolute;
+    bottom: 0px;
+    z-index: 1;
+}
